# airflow-on-aca-jobs

./: .gitignore  LICENSE  README.md  azure.yaml  pyproject.toml
.github/workflows/: ci.yml
airflow/: requirements.txt
airflow/dags/: aca_jobs_example_dag.py  aca_jobs_pipeline_dag.py
airflow/plugins/operators/: __init__.py  aca_jobs_common.py  azure_container_apps_job_operator.py
airflow/plugins/triggers/: __init__.py  azure_container_apps_job_trigger.py
demo/: run-demo.ps1  run-demo.sh
infra/: main.bicep  main.parameters.json
infra/scripts/: select-tier.ps1  select-tier.sh
tests/: conftest.py  test_auth.py  test_common.py  test_operator.py  test_trigger.py
